feat: integrated Vue 3 into Electron application

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
+<!-- src/index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
-
+    <title>Expimo Desktop App</title>
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <div id="app"></div>
+    <!-- The renderer.js script is included automatically -->
   </body>
 </html>
